# android-cmake

Source/: CMakeLists.txt  cmAndroidGradleBuild.cxx  cmAndroidGradleBuild.h  cmCacheManager.cxx  cmCacheManager.h  cmExtraAndroidGradleGenerator.cxx  cmExtraAndroidGradleGenerator.h  cmGlobalNinjaGenerator.cxx  cmGlobalUnixMakefileGenerator3.cxx  cmNinjaTargetGenerator.cxx  cmake.cxx
Tests/: CMakeLists.txt
Tests/AndroidGradleBuild/: CMakeLists.txt  exe.c  exe.cpp  exe.cxx  exe.h  exe.hpp  exe.hxx  main.c  main.cpp  main.cxx
Tests/AndroidGradleBuild/module/: CMakeLists.txt  module.c  module.cpp  module.cxx  module.h  module.hpp  module.hxx
Tests/AndroidGradleBuild/object/: CMakeLists.txt  object.c  object.cpp  object.cxx  object.h  object.hpp  object.hxx
Tests/AndroidGradleBuild/shared/: CMakeLists.txt  shared.c  shared.cpp  shared.cxx  shared.h  shared.hpp  shared.hxx
Tests/AndroidGradleBuild/static/: CMakeLists.txt  static.c  static.cpp  static.cxx  static.h  static.hpp  static.hxx
Tests/CMakeLib/: CMakeLists.txt  check_android_gradle_build.cxx
Tests/RunCMake/CPack/: RunCMakeTest.cmake
kokoro/: build.py  kokoro_build.cmd  kokoro_build.ps1  kokoro_build.sh
kokoro/gcp_ubuntu/: continuous.cfg
kokoro/gcp_windows/: continuous.cfg  presubmit.cfg
kokoro/macos_external/: continuous.cfg  presubmit.cfg
